fixed z-index of sections

--- a/src/styles/partials/sections/_about.scss
+++ b/src/styles/partials/sections/_about.scss
@@ -3,8 +3,9 @@
 
 
 .about {
-  @include mix.move-to-top-by(0);
+  position: relative;
   overflow: hidden;
+  @include mix.move-to-top-by(0);
   display: flex;
   flex-direction: column;
   gap: 3em;
@@ -40,7 +41,6 @@
     
     width: 100%;
     height: 100%;
-    position: relative;
     
     display: flex;
     justify-content: flex-end;
@@ -56,6 +56,7 @@
     flex-shrink: 1;
     
     position: relative;
+    
   }
   
   &__overlay {
@@ -80,8 +81,6 @@
             linear-gradient(-90deg, rgba($bg-clor,1) var(--right), transparent var(--right), transparent),
             linear-gradient(0deg,   rgba($bg-clor,1) var(--bottom), transparent var(--bottom), transparent),
             linear-gradient(90deg,  rgba($bg-clor,1) var(--left), transparent var(--left), transparent);
-    
-    
   }
   
   &__clip {
@@ -93,9 +92,8 @@
     border-color: var.$color--blue-night--300;
     background-color: transparent;
     
-    box-shadow: 0 0 0 .5em var.$color--blue-night--50, inset 0 0 1em 0 rgba(#000, .2);
+    box-shadow: 0 0 0 5em var.$color--blue-night--50, inset 0 0 1em 0 rgba(#000, .2);
     
-    //transform: translateZ(0px);
   
   }
   
@@ -108,11 +106,6 @@
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-  
-  
-    //transform: translateZ(5px) scale(calc((1 + 5) / 1));
-  
-  
   }
   
 }// .about
