--- a/src/styles/partials/sections/_contact.scss
+++ b/src/styles/partials/sections/_contact.scss
@@ -6,5 +6,6 @@
   margin-top: -1em;
   background-color: var.$color--blue-night--50;
   color: var.$color--blue-night;
+  position: relative;
   
 }//
