--- a/src/styles/partials/sections/_projects.scss
+++ b/src/styles/partials/sections/_projects.scss
@@ -4,5 +4,6 @@
 
 .projects {
   margin-top: -1em;
+  position: relative;
   
 }//
